crates/oxidoc/tests/snapshots/golden_writer__rst__common__emphasis-with-link.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
*see* `text <http://example.com>`__ *here*
