crates/oxidoc/tests/snapshots/golden_writer__rst__common__escape-flanking.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
a \* b \` c \| d and trailing_ref\_
