crates/oxidoc/tests/snapshots/golden_writer__rst__common__escape-specials.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
a & b % c # d \_ e $ f { g } h ^ i ~ j
