crates/oxidoc/tests/snapshots/golden_writer__rst__common__footnote-codeblock-end.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
ref [1]_

.. [1]
   ::

      code only
