crates/oxidoc/tests/snapshots/golden_writer__rst__common__footnote-simple.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
ref [1]_

.. [1]
   the note body
