crates/oxidoc/tests/snapshots/golden_writer__rst__common__horizontal-rule.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
above

--------------

below
