crates/oxidoc/tests/snapshots/golden_writer__rst__common__image-external.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
|alt|

.. |alt| image:: https://example.org/i.png
