crates/oxidoc/tests/snapshots/golden_writer__rst__common__image-inline.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
an |alt words| inline

.. |alt words| image:: pic.png
