crates/oxidoc/tests/snapshots/golden_writer__rst__common__inline-code-backtick.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
use :literal:`a \`b\` c` here
